--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.0",
     "firebase": "^9.15.0",
     "material-icons": "^1.13.1",
     "react": "^18.2.0",
